add more to the temperature examples

--- a/ollama-tutorial.ipynb
+++ b/ollama-tutorial.ipynb
@@ -257,26 +257,51 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "prompt_creative = \"I love nature. Suggest me 3 places I should visit. Why?\"\n",
+    "prompt_creative = \n",
     "prompt_creative2 = \"Give me 10 product name ideas for an eco-friendly sportswear for basketball players\"\n",
     "\n",
-    "\n",
-    "# TODO: need a better example for high reasoning...\n",
-    "prompt_reasoning = \"You have three boxes. One contains only apples, one contains only oranges, and one contains both apples and oranges. Each box is labeled, but all the labels are incorrect. You are allowed to pick one fruit from one box. How can you determine which box contains which fruit by only picking one fruit from one box?\""
+    "\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Let's begin with the \"creative\" task."
+    "Let's begin with the \"creative\" task.\n",
+    "\n",
+    "For the creative task, I'll duplicate each cell (with temperature 0 and 1).\n",
+    "\n",
+    "The goal here is to show you that:\n",
+    "- temperature 0 will return identical ideas.\n",
+    "- temperature = 1 will be more creative and unpredictible"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Here are 10 product name ideas for eco-friendly sportswear for basketball players:\n",
+      "\n",
+      "1. **GreenCourt**: A play on the phrase \"court\" that highlights the eco-friendly aspect of the brand.\n",
+      "2. **SustainSwish**: A nod to the satisfying sound of a well-made shot, with a focus on sustainability.\n",
+      "3. **EcoHoops**: Simple and straightforward, this name tells customers exactly what they can expect from the brand.\n",
+      "4. **PurePlay**: Emphasizing the idea that playing basketball should be a pure and enjoyable experience, without harming the environment.\n",
+      "5. **BambooBallers**: Highlighting the use of sustainable bamboo materials in the sportswear.\n",
+      "6. **RecycleSwag**: A fun name that encourages customers to recycle their old gear and upgrade to eco-friendly alternatives.\n",
+      "7. **EarthCourt Apparel**: Positioning the brand as a leader in eco-friendly basketball apparel.\n",
+      "8. **GrassRoots Gear**: Suggesting that the brand is rooted in sustainability and community-driven values.\n",
+      "9. **Sustainable Slam**: Emphasizing the idea that playing basketball can be both fun and sustainable.\n",
+      "10. **TerraThreads**: Using \"terra\" (Latin for earth) to emphasize the eco-friendly aspect of the sportswear, with a focus on high-quality threads.\n",
+      "\n",
+      "I hope these ideas inspire you!\n"
+     ]
+    }
+   ],
    "source": [
     "model = \"llama3.1\"\n",
     "\n",
@@ -298,34 +323,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "A nature lover, eh? I'd be delighted to suggest three incredible destinations for you to explore. Here they are:\n",
+      "Here are 10 product name ideas for eco-friendly sportswear for basketball players:\n",
       "\n",
-      "**1. Ha Long Bay, Vietnam**\n",
+      "1. **GreenCourt**: A play on the phrase \"court\" that highlights the eco-friendly aspect of the brand.\n",
+      "2. **SustainSwish**: A nod to the satisfying sound of a swished shot, with a focus on sustainability.\n",
+      "3. **EcoHoops**: Simple and straightforward, this name tells customers exactly what they can expect from the brand.\n",
+      "4. **PurePlay**: This name conveys a sense of cleanliness and purity, which is perfect for eco-friendly sportswear.\n",
+      "5. **BambooBallers**: Bamboo is a highly sustainable material, making it a great feature to highlight in the product name.\n",
+      "6. **RecycleSwing**: This name incorporates a fun basketball term (\"swing\") with a focus on recycling and sustainability.\n",
+      "7. **EarthCourt Apparel**: This name emphasizes the brand's commitment to protecting the planet while still delivering high-quality sportswear.\n",
+      "8. **Sustainable Slam**: Another play on a popular basketball term, this name highlights the eco-friendly aspect of the brand.\n",
+      "9. **GreenGame Wear**: This name positions the brand as a leader in sustainable sportswear for basketball players.\n",
+      "10. **ClimaCourt**: \"Clima\" is short for climate, and this name suggests that the brand's products are designed to help athletes perform at their best while also reducing their environmental impact.\n",
       "\n",
-      "Ha Long Bay is a stunning natural wonder featuring over 1,600 limestone islands and islets rising out of the emerald waters of the Gulf of Tonkin. The bay's unique landscape was formed by millions of years of erosion, creating a surreal scenery that will leave you awestruck. Take a boat tour to explore hidden caves, grottos, and secluded beaches, or simply sit back and enjoy the breathtaking views.\n",
-      "\n",
-      "**Why:** Ha Long Bay is a UNESCO World Heritage Site, and its natural beauty is unlike anywhere else on Earth. The bay's diverse ecosystem supports an incredible array of marine life, including dolphins, whales, and over 1,000 species of fish.\n",
-      "\n",
-      "**2. Yellowstone National Park, USA**\n",
-      "\n",
-      "Yellowstone is America's first national park, and it's a nature lover's paradise. This vast wilderness area boasts geysers, hot springs, and an abundance of wildlife, including grizzly bears, wolves, and bison. The park's diverse landscapes range from alpine meadows to deep canyons, with over 10,000 geothermal features, including the famous Old Faithful geyser.\n",
-      "\n",
-      "**Why:** Yellowstone is home to a staggering array of natural wonders, including the Grand Prismatic Spring (the largest hot spring in the United States) and the Upper and Lower Yellowstone Falls. The park's rich geological history and diverse ecosystems make it an ideal destination for nature enthusiasts.\n",
-      "\n",
-      "**3. Galapagos Islands, Ecuador**\n",
-      "\n",
-      "The Galapagos Islands are a living laboratory of evolution, where you can see incredible wildlife that inspired Charles Darwin's theory of natural selection. This unique ecosystem is home to giant tortoises, marine iguanas, blue-footed boobies, and an array of other endemic species found nowhere else on Earth.\n",
-      "\n",
-      "**Why:** The Galapagos Islands are a true nature lover's dream destination. With their incredible biodiversity and relatively untouched landscapes, you'll have the chance to experience the natural world in its purest form. Take a guided tour to explore the islands' volcanic landscapes, snorkel with sea turtles, or simply sit back and enjoy the tranquility of this enchanting archipelago.\n",
-      "\n",
-      "Each of these destinations offers an unforgettable nature experience that will leave you inspired and connected to the natural world. Which one would you like to visit first?\n"
+      "I hope these ideas inspire you!\n"
      ]
     }
    ],
@@ -345,35 +363,34 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Not only did I get the same places... The entire answer is identical!"
+    "Looks familiar??\n",
+    "\n",
+    "The entire answer is identical!"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "A nature lover, eh? I'd be delighted to suggest three breathtaking destinations that will leave you in awe of the natural world. Here they are:\n",
+      "Here are 10 product name ideas for eco-friendly sportswear for basketball players:\n",
       "\n",
-      "**1. Ha Long Bay, Vietnam**\n",
+      "1. **GreenCourt**: A play on the phrase \"home court\" that emphasizes the eco-friendly aspect.\n",
+      "2. **SustainHoops**: Combining \"sustainability\" with \"hoops\" to create a catchy and memorable name.\n",
+      "3. **EcoSwish**: Using the slang term \"swish\" (meaning making a shot) while highlighting the eco-friendly aspect of the product.\n",
+      "4. **PurePlay**: Emphasizing the idea of playing with a clear conscience, knowing you're wearing an eco-friendly product.\n",
+      "5. **COURTionable**: A playful take on the word \"considerate\" that positions the product as a responsible choice for basketball players.\n",
+      "6. **SoleMates**: Highlighting the fact that your athletic shoes are made from eco-friendly materials, with \"sole mates\" implying a perfect fit and a sustainable choice.\n",
+      "7. **TerraHoops**: Using the Latin word for \"earth\" to create a strong connection between the product and the environment.\n",
+      "8. **HoopRevolution**: Positioning the eco-friendly sportswear as a game-changing force in basketball, inspiring players to join the revolution.\n",
+      "9. **PurePassion**: Combining the idea of playing with passion with the notion of wearing an eco-friendly product that aligns with your values.\n",
+      "10. **NetGain**: Emphasizing the positive impact of choosing an eco-friendly sportswear while hinting at improved performance on the court.\n",
       "\n",
-      "Why: This UNESCO World Heritage Site is a stunning example of limestone karst landscape, featuring over 1,600 towering islands and islets rising out of emerald waters. The ethereal beauty of Ha Long Bay is a result of millions of years of geological erosion, creating an otherworldly atmosphere that will leave you speechless.\n",
-      "\n",
-      "**2. Grand Canyon National Park, USA**\n",
-      "\n",
-      "Why: One of the most iconic natural wonders in the United States, the Grand Canyon is a testament to the power of erosion and geological forces. The Colorado River has carved out this breathtaking canyon over millions of years, revealing layers of sandstone, limestone, and granite that stretch as far as the eye can see.\n",
-      "\n",
-      "**3. Svalbard Archipelago, Norway**\n",
-      "\n",
-      "Why: Located in the High Arctic, Svalbard is a remote and inhospitable destination that's home to breathtaking fjords, glaciers, and snow-capped mountains. The northernmost inhabited region on Earth offers a glimpse into an untouched world of polar bears, walruses, and arctic foxes, making it a true adventure for nature enthusiasts.\n",
-      "\n",
-      "Each of these destinations offers a unique experience and opportunities to connect with the natural world in a profound way. Get ready to be awestruck by the sheer scale and beauty of our planet's most incredible landscapes!\n",
-      "\n",
-      "Which one would you like to visit first?\n"
+      "I hope you find these ideas inspiring!\n"
      ]
     }
    ],
@@ -382,7 +399,7 @@
     "\n",
     "response = ollama.chat(\n",
     "    model=model, \n",
-    "    messages=[{\"role\": \"user\", \"content\": prompt_creative}], \n",
+    "    messages=[{\"role\": \"user\", \"content\": prompt_creative2}], \n",
     "    options={\"temperature\": 1.0}\n",
     "    )\n",
     "\n",
@@ -398,31 +415,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "A nature lover, eh? I've got three incredible destinations for you to explore. Here they are:\n",
+      "Here are 10 product name ideas for eco-friendly sportswear for basketball players:\n",
       "\n",
-      "**1. Ha Long Bay, Vietnam**\n",
-      "Imagine floating among over 1,600 limestone islands and islets in a stunning turquoise sea. Ha Long Bay is a UNESCO World Heritage Site, known for its emerald waters, white sandy beaches, and majestic karst landscapes. It's a perfect spot for kayaking, rock climbing, or simply relaxing amidst nature's breathtaking beauty.\n",
+      "1. **Green Court**: Suggests a commitment to playing on a sustainable, eco-friendly court and the apparel that supports it.\n",
+      "2. **EcoHoops**: A playful name that combines \"eco\" with \"hoops,\" conveying a fun, environmentally conscious approach to basketball.\n",
+      "3. **Sustainable Slam**: Emphasizes the idea of dominating on the court while also being mindful of the planet's well-being.\n",
+      "4. **PureCourt Apparel**: Implies a high level of purity and cleanliness in both the sportswear and the game itself.\n",
+      "5. **Greenball Gear**: A simple, straightforward name that gets the point across: this gear is eco-friendly!\n",
+      "6. **Bounce Back Sustainable Sportswear**: Suggests a commitment to sustainability while also promoting the idea of bouncing back from adversity on the court.\n",
+      "7. **CourtConscious**: A clever play on words that encourages players to be mindful of their impact on the environment, both on and off the court.\n",
+      "8. **Rebound Wear**: References the physical act of rebounding in basketball while also implying a commitment to sustainable reuse and recycling practices.\n",
+      "9. **EcoSwish**: A catchy name that combines \"eco\" with the satisfying sound of a well-made shot (the \"swish\").\n",
+      "10. **NetZero Apparel**: Suggests a goal of achieving zero waste or negative environmental impact, both in terms of production and consumption.\n",
       "\n",
-      "**2. The Amazon Rainforest, South America**\n",
-      "The Amazon is the world's largest tropical rainforest, spanning across nine countries in South America. This vast ecosystem is home to an astonishing array of flora and fauna, including over 10% of all known plant and animal species on Earth! Hike through the dense jungle, spot monkeys, macaws, and anacondas, or experience the majestic beauty of a sunset over this verdant wonderland.\n",
-      "\n",
-      "**3. The Grand Canyon, Arizona, USA**\n",
-      "One of the most iconic natural wonders in North America, the Grand Canyon is a breathtaking example of erosion's power. This Colorado River-carved masterpiece stretches 277 miles long, up to 18 miles wide, and a mile deep. Take a scenic helicopter tour or hike down into the canyon for an unforgettable experience amidst rugged red rock formations, vast expanses of desert landscape, and a kaleidoscope of vibrant colors.\n",
-      "\n",
-      "These three destinations offer unique experiences that will connect you with nature's grandeur:\n",
-      "\n",
-      "* Ha Long Bay provides an unforgettable aquatic adventure among limestone karst islands.\n",
-      "* The Amazon Rainforest immerses you in the world's most biodiverse ecosystem.\n",
-      "* The Grand Canyon presents a majestic example of geological transformation and natural beauty.\n",
-      "\n",
-      "Which one inspires you to explore?\n"
+      "I hope these ideas inspire you!\n"
      ]
     }
    ],
@@ -431,7 +444,7 @@
     "\n",
     "response = ollama.chat(\n",
     "    model=model, \n",
-    "    messages=[{\"role\": \"user\", \"content\": prompt_creative}], \n",
+    "    messages=[{\"role\": \"user\", \"content\": prompt_creative2}], \n",
     "    options={\"temperature\": 1.0}\n",
     "    )\n",
     "\n",
@@ -442,7 +455,96 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Cool! We got some new places and compleately diffent reasoning."
+    "Cool! We got some new and surprising ideas!\n",
+    "\n",
+    "You could test it further with queries like:\n",
+    "1. \"Create a poem about a baby fox\" (or whatever you want):\n",
+    "   - `temperature = 0.0` will always create the same poem\n",
+    "   - `temperature = 1.0` will always create a different poem\n",
+    "2. \"I love nature. Suggest me 3 places I should visit. Why?\"\n",
+    "   - `temperature = 0.0` will always suggest the same 3 places for the same reason\n",
+    "   - `temperature = 1.0` will choose random 3 places (but you may see repetitions too)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now, let's test the reasoning. We'll start with a high temperature (expecting the wrong answer)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# TODO: need a better example for high reasoning...\n",
+    "prompt_reasoning = \"You have three boxes. One contains only apples, one contains only oranges, and one contains both apples and oranges. Each box is labeled, but all the labels are incorrect. You are allowed to pick one fruit from one box. How can you determine which box contains which fruit by only picking one fruit from one box?\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "You should open one of the boxes, reach in, and grab a handful of fruits. This will ensure that at least some of them come from the box that is labeled \"apples\" or \"oranges\", rather than the one that has both apples and oranges. Now look to see if any of your chosen fruit are not like others, i.e., look for something different in shape, size, or color, because that will be one of your two known fruits. The rest have got to come from the box labeled with their name.\n"
+     ]
+    }
+   ],
+   "source": [
+    "response = ollama.chat(\n",
+    "    model=model, \n",
+    "    messages=[{\"role\": \"user\", \"content\": prompt_reasoning}], \n",
+    "    options={\"temperature\": 1.0}\n",
+    "    )\n",
+    "\n",
+    "print(response[\"message\"][\"content\"])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This is a nonsensical answer! Feel free to read it :)\n",
+    "\n",
+    "Let's see how if low temperature helps with this logical exercise..."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Pick a fruit from the box that says \"both\". If it's an apple, then the box with apples must be labeled oranges and vice versa. The box with oranges is therefore the one labeled \"both\".\n"
+     ]
+    }
+   ],
+   "source": [
+    "response = ollama.chat(\n",
+    "    model=model, \n",
+    "    messages=[{\"role\": \"user\", \"content\": prompt_reasoning}], \n",
+    "    options={\"temperature\": 0.0}\n",
+    "    )\n",
+    "\n",
+    "print(response[\"message\"][\"content\"])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The answer is correct (but it could be more descriptive).\n",
+    "\n",
+    "*Note:* I hope my examples help you see the difference between the low and high temperature. If you have better ideas on how to test the temperatures, let me know..."
    ]
   },
   {
