finish temperature, add max tokens, test seed

--- a/ollama-tutorial.ipynb
+++ b/ollama-tutorial.ipynb
@@ -252,18 +252,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "prompt_creative = \n",
-    "prompt_creative2 = \"Give me 10 product name ideas for an eco-friendly sportswear for basketball players\"\n",
-    "\n",
-    "\n"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -274,6 +262,22 @@
     "The goal here is to show you that:\n",
     "- temperature 0 will return identical ideas.\n",
     "- temperature = 1 will be more creative and unpredictible"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "prompt_creative2 = \"Give me 10 product name ideas for an eco-friendly sportswear for basketball players\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "First, `temperature = 0.0`"
    ]
   },
   {
@@ -363,9 +367,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Looks familiar??\n",
+    "Looks familiar?\n",
     "\n",
-    "The entire answer is identical!"
+    "The entire answer is identical!\n",
+    "\n",
+    "**For temperature = 0, LLMs become deterministic.**\n",
+    "\n",
+    "It means, for the same input (prompt) we always get the same output (response).\n",
+    "\n",
+    "Now, let's try temperature = 1"
    ]
   },
   {
@@ -460,7 +470,7 @@
     "You could test it further with queries like:\n",
     "1. \"Create a poem about a baby fox\" (or whatever you want):\n",
     "   - `temperature = 0.0` will always create the same poem\n",
-    "   - `temperature = 1.0` will always create a different poem\n",
+    "   - `temperature = 1.0` will create various poems\n",
     "2. \"I love nature. Suggest me 3 places I should visit. Why?\"\n",
     "   - `temperature = 0.0` will always suggest the same 3 places for the same reason\n",
     "   - `temperature = 1.0` will choose random 3 places (but you may see repetitions too)"
@@ -512,7 +522,7 @@
    "source": [
     "This is a nonsensical answer! Feel free to read it :)\n",
     "\n",
-    "Let's see how if low temperature helps with this logical exercise..."
+    "Let's see if low temperature solves the logical exercise..."
    ]
   },
   {
@@ -544,48 +554,143 @@
    "source": [
     "The answer is correct (but it could be more descriptive).\n",
     "\n",
-    "*Note:* I hope my examples help you see the difference between the low and high temperature. If you have better ideas on how to test the temperatures, let me know..."
+    "*Note:* I hope my examples help you see the difference between the low and high temperature. If you have better ideas on how to test the temperatures, let me know...\n",
+    "\n",
+    "I only showed you the extreme temparatures (0 and 1). But you can choose any temperature in that range. Remember, it's a trade-off you choose between reasoning and creativity.\n",
+    "\n",
+    "**What's the temperature of ChatGPT and similar?**\n",
+    "\n",
+    "It's somewhere between 0.5 and 0.7. It allows more random and surprising responses, while keeping the reasoning quite high."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Max Tokens\n",
+    "\n",
+    "Max tokens limits the number of tokens in the LLM response.\n",
+    "\n",
+    "Using max tokens has practical implications, such as:\n",
+    "- controlling response length (and costs)\n",
+    "- managing computational resources\n",
+    "\n",
+    "But, here's an issue with that...\n",
+    "\n",
+    "Max tokens actually cuts off the response when it reaches the limit.\n",
+    "\n",
+    "Let me show you an example. \n",
+    "\n",
+    "I'll ask Llama 3 to write a poem twice (without and with token limits). I'll use temperature = 0, so I expect the same poem.\n",
+    "\n",
+    "First, let's write a poem without token limit."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "While there's no one-size-fits-all formula for getting rich, here are some general tips that\n"
+      "In forest depths, where sunbeams play,\n",
+      "A tiny fox with fur so bright came to stay.\n",
+      "His eyes, like emeralds shining wide,\n",
+      " Sparkled with kindness, as he'd glide.\n",
+      "\n",
+      "With steps so light, and ears so fine,\n",
+      "He'd dance through grass, with a playful whine.\n",
+      "His bushy tail, a-twitch with glee,\n",
+      " Invited friends, to come and see.\n",
+      "\n",
+      "This friendly baby fox, with heart so true,\n",
+      "Would snuggle close, and nuzzle too.\n",
+      "He'd lick your hand, with a gentle touch,\n",
+      "And bring a smile, from the forest's hush.\n",
+      "\n",
+      "As he explored, with curious eyes,\n",
+      "He'd discover wonders, in sun-kissed skies.\n",
+      "A butterfly's dance, or a bird's sweet song,\n",
+      "Would fill his heart, with joy so strong.\n",
+      "\n",
+      "This little fox, with a spirit so bright,\n",
+      "Shone like a star, on a forest night.\n",
+      "His friendly nature, and loving ways,\n",
+      " Made friends of all, who'd gaze upon his face.\n",
+      "\n",
+      "So if you wander, through the woods one day,\n",
+      "And meet this baby fox, in a sunny ray,\n",
+      "Don't be afraid, just smile and say,\n",
+      "\"Hello little friend,\" and come what may.\n"
      ]
     }
    ],
    "source": [
-    "def generate_response(messages, **kwargs):\n",
-    "    response = ollama.chat(model=model, messages=messages, **kwargs)\n",
-    "    return response[\"message\"][\"content\"]\n",
+    "import ollama\n",
     "\n",
-    "messages = [{\"role\": \"user\", \"content\": \"How to get rich?\"}]\n",
-    "response = generate_response(messages, options={\"num_predict\": 20})\n",
+    "prompt_poem = \"Write a poem about a friendly baby fox.\"\n",
     "\n",
-    "print(response)"
+    "model = \"llama3.1\"\n",
+    "\n",
+    "response = ollama.chat(\n",
+    "    model=model, \n",
+    "    messages=[{\"role\": \"user\", \"content\": prompt_poem}], \n",
+    "    options={\"temperature\": 0}\n",
+    "    )\n",
+    "\n",
+    "print(response[\"message\"][\"content\"])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Cool! Now, let's pass the token limit. In Ollama, we use the `\"num_predict\"` option. I'll set it to 50."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Getting rich requires a combination of smart financial decisions, hard work, and a bit of luck. Here\n"
+      "In forest depths, where sunbeams play,\n",
+      "A tiny fox with fur so bright came to stay.\n",
+      "His eyes, like emeralds shining wide,\n",
+      " Sparkled with kindness, as he'd glide.\n",
+      "\n",
+      "With steps so light, and ears so fine\n"
      ]
     }
    ],
    "source": [
-    "ollama.chat(model=model, messages=messages)"
+    "response = ollama.chat(\n",
+    "    model=model, \n",
+    "    messages=[{\"role\": \"user\", \"content\": prompt_poem}], \n",
+    "    options={\"num_predict\": 50, \"temperature\": 0}\n",
+    "    )\n",
+    "\n",
+    "print(response[\"message\"][\"content\"])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Do you see the problem?\n",
+    "\n",
+    "The model generates the same poem but with a hard-stop when reaching the token limit.\n",
+    "\n",
+    "So the response is incomplete.\n",
+    "\n",
+    "By using max tokens, we risk that the model will not finish its response.\n",
+    "\n",
+    "<img src=\"images/tokens50.png\" alt=\"systemImage\" width=500 />"
    ]
   },
   {
@@ -627,6 +732,47 @@
     "    token = chunk[\"message\"][\"content\"]\n",
     "    if token is not None:\n",
     "        print(token, end=\"\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "While there's no one-size-fits-all formula for getting rich, here are some general tips that\n"
+     ]
+    }
+   ],
+   "source": [
+    "def generate_response(messages, **kwargs):\n",
+    "    response = ollama.chat(model=model, messages=messages, **kwargs)\n",
+    "    return response[\"message\"][\"content\"]\n",
+    "\n",
+    "messages = [{\"role\": \"user\", \"content\": \"How to get rich?\"}]\n",
+    "response = generate_response(messages, options={\"num_predict\": 20})\n",
+    "\n",
+    "print(response)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Getting rich requires a combination of smart financial decisions, hard work, and a bit of luck. Here\n"
+     ]
+    }
+   ],
+   "source": [
+    "ollama.chat(model=model, messages=messages)"
    ]
   },
   {
